--- a/output.css
+++ b/output.css
@@ -529,121 +529,20 @@ video {
   top: 0px;
 }
 
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-20 {
-  right: 5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-3 {
-  top: 0.75rem;
+.right-\[23\%\] {
+  right: 23%;
 }
 
 .top-36 {
   top: 9rem;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.right-\[\] {
-  right: ;
-}
-
-.right-\[5\] {
-  right: 5;
-}
-
-.right-\[50\] {
-  right: 50;
-}
-
-.right-\[50\%\] {
-  right: 50%;
-}
-
-.right-\[0\%\] {
-  right: 0%;
-}
-
-.right-\[30\%\] {
-  right: 30%;
-}
-
-.right-\[3\%\] {
-  right: 3%;
-}
-
-.right-\[\%\] {
-  right: %;
-}
-
-.right-\[2\%\] {
-  right: 2%;
-}
-
-.right-\[25\%\] {
-  right: 25%;
-}
-
-.right-\[23\%\] {
-  right: 23%;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
 .right-12 {
   right: 3rem;
 }
 
-.z-30 {
-  z-index: 30;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
 .z-50 {
   z-index: 50;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .mx-3 {
@@ -654,6 +553,21 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-7 {
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .ml-10 {
@@ -668,16 +582,8 @@ video {
   margin-top: 0.5rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .mt-10 {
@@ -692,20 +598,28 @@ video {
   margin-left: 1.5rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .ml-24 {
   margin-left: 6rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .flex {
@@ -732,6 +646,18 @@ video {
   height: 720px;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[75\%\] {
+  height: 75%;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -740,56 +666,8 @@ video {
   height: 1.5rem;
 }
 
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[10\] {
-  height: 10;
-}
-
-.h-\[1000\] {
-  height: 1000;
-}
-
-.h-\[1000p\] {
-  height: 1000p;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-\[20\] {
-  height: 20;
-}
-
-.h-\[200\] {
-  height: 200;
-}
-
-.h-\[200p\] {
-  height: 200p;
-}
-
-.h-\[200px\] {
-  height: 200px;
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-8 {
@@ -804,96 +682,16 @@ video {
   width: 1.5rem;
 }
 
-.w-\[100\%\] {
-  width: 100%;
+.w-\[75\%\] {
+  width: 75%;
+}
+
+.w-\[430px\] {
+  width: 430px;
 }
 
 .w-24 {
   width: 6rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[1\] {
-  width: 1;
-}
-
-.w-\[10\] {
-  width: 10;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-9 {
-  width: 2.25rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[200\] {
-  width: 200;
-}
-
-.w-\[200p\] {
-  width: 200p;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[00px\] {
-  width: 00px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[400p\] {
-  width: 400p;
-}
-
-.w-\[400\] {
-  width: 400;
-}
-
-.w-\[40\] {
-  width: 40;
-}
-
-.w-\[4\] {
-  width: 4;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
-.w-\[0\%\] {
-  width: 0%;
-}
-
-.w-\[\%\] {
-  width: %;
-}
-
-.w-\[7\%\] {
-  width: 7%;
-}
-
-.w-\[75\%\] {
-  width: 75%;
 }
 
 .cursor-pointer {
@@ -928,12 +726,16 @@ video {
   gap: 1rem;
 }
 
-.border {
-  border-width: 1px;
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .border-2 {
   border-width: 2px;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-red-700 {
@@ -946,8 +748,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .bg-red-900 {
@@ -960,12 +763,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'img\/header_img\.jpg\'\)\] {
-  background-image: url('img/header_img.jpg');
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\'img\/header_img\.jpg\'\)\] {
+  background-image: url('img/header_img.jpg');
 }
 
 .bg-fixed {
@@ -980,9 +789,9 @@ video {
   background-repeat: no-repeat;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .py-2 {
@@ -990,9 +799,19 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pt-3 {
@@ -1020,11 +839,6 @@ video {
   font-size: 5.5em;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1049,10 +863,6 @@ video {
   font-weight: 600;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .italic {
   font-style: italic;
 }
@@ -1071,28 +881,17 @@ video {
   color: rgb(153 27 27 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .outline {
   outline-style: solid;
-}
-
-.outline-2 {
-  outline-width: 2px;
 }
 
 .outline-red-800 {
@@ -1108,4 +907,14 @@ body {
   -webkit-text-stroke-width: 0.6px;
   line-height: 1.5;
   -webkit-text-fill-color: rgb(246, 9, 9);
+}
+
+#zigzag {
+  background:
+    linear-gradient(135deg, #ECEDDC 25%, transparent 25%) -50px 0,
+    linear-gradient(225deg, #ECEDDC 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, #ECEDDC 25%, transparent 25%),
+    linear-gradient(45deg, #ECEDDC 25%, transparent 25%);
+  background-size: 100px 100px;
+  background-color: #EC173A;
 }
