--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@ body {
     line-height: 1.5;
     -webkit-text-fill-color: rgb(246, 9, 9);
 }
+
+#zigzag {background:
+    linear-gradient(135deg, #ECEDDC 25%, transparent 25%) -50px 0,
+    linear-gradient(225deg, #ECEDDC 25%, transparent 25%) -50px 0,
+    linear-gradient(315deg, #ECEDDC 25%, transparent 25%),
+    linear-gradient(45deg, #ECEDDC 25%, transparent 25%);
+  background-size: 100px 100px;
+  background-color: #EC173A;}
